--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1",
+    "nodemailer": "^6.7.0",
     "stripe": "^8.186.1"
   },
   "devDependencies": {
