--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "firebase": "^9.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
-    "react-format-currency": "^0.1.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
